# drf-auth

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
memes_api/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
memes_api/migrations/: 0001_initial.py  0002_memenopic.py  0003_rename_memenopic_memenoimg.py
